[package]
name = "modql-macros"
version = "0.0.4"
authors = ["jeremy.chone@gmail.com"]
edition = "2021"
description = "Macros for modql. Not intended to be used directly."
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
homepage = "https://github.com/modql/rust-modql"
repository = "https://github.com/modql/rust-modql"

[dependencies]
quote = "^1.0"
syn = {version = "^1.0", features = ["full"]}
proc-macro2 = "1.0"

[lib]
proc-macro = true