[package]
name = "modql-macros"
version = "0.3.0-WIP"
authors = ["jeremy.chone@gmail.com"]
edition = "2021"
description = "Macros for modql. Not intended to be used directly."
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
homepage = "https://github.com/modql/rust-modql"
repository = "https://github.com/modql/rust-modql"

[features]
default = []
with-sea-query = ["sea-query"]

[dependencies]
quote = "1"
syn = {version = "2", features = ["full"]}
proc-macro2 = "1"
sea-query = { version = "0.30", optional = true }

[lib]
proc-macro = true