[package]
name = "modql-macros"
version = "0.4.0-rc.3"
authors = ["jeremy.chone@gmail.com"]
edition = "2021"
description = "Macros for modql. Not intended to be used directly."
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
homepage = "https://github.com/modql/rust-modql"
repository = "https://github.com/modql/rust-modql"

[lints]
workspace = true

[features]
with-sea-query = ["sea-query"]
with-rusqlite = ["rusqlite"]

[dependencies]
quote = "1"
syn = {version = "2", features = ["full"]}
proc-macro2 = "1"

# -- For features
sea-query = { version = "0.31.0-rc", optional = true }
rusqlite = { version = "0.31", optional = true }

[lib]
proc-macro = true